--- a/myIntroPage.html
+++ b/myIntroPage.html
@@ -25,9 +25,15 @@
       background-color: white;
       
     }
+
+    div {
+      max-width: 800 px;
+    }
+
     img {
       float: left;
       margin-right: 15px;
+      width: 40%;
       max-width: 300px;
     }
   </style>
@@ -46,17 +52,15 @@
   
   <div>
     <img src="https://lh5.googleusercontent.com/p/AF1QipMzbbW-pq4jPVMJToaRE9-jmRaOAWA4Yz6Gu7vq=w408-h306-k-no" alt="Favorite Place">
-    <p>My favorite place is this lake near my friends' house.</p> 
-    <p>It is not an actual lake but an artificial one in their </p>
-    <p>neighborhood. I have a lot of memories in this place, </p>
-    <p>because it was where my friends would gather and play</p>
-    <p>after school when we were kids. There are a lot of cute</p>
-    <p>animals like ducks, geese, and rabbits around too.</p>
+    <p> My favorite place is this lake near my friends' house. It is not an actual lake but an artificial one in their neighborhood. 
+        I have a lot of memories in this place,  because it was where my friends would gather and play after school when we were kids. 
+        There are a lot of cute animals like ducks, geese, and rabbits around too.</p>
   </div>
 
-  <hr>
+  <br style="clear: both;">
+  <hr style="clear: both;">
 
-  <p><strong>Favorite Restaurant:</strong> <a href="https://www.dojosushionline.com/" target="_blank">Dojo Sushi</a></p>
-  <p><strong>Something no one would expect about me:</strong> I have never had pets before :(</p>
+  <p style="clear: both;"><strong>Favorite Restaurant:</strong> <a href="https://www.dojosushionline.com/" target="_blank">Dojo Sushi</a></p>
+  <p style="clear: both;"><strong>Something no one would expect about me:</strong> I have never had pets before :(</p>
 </body>
 </html>
